--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <body>
   <div id="top-menu" class="ui menu" style = "height : 60px;">
         <div class="header item">
-          <h1 id="title"><a href="index.php">Proof Checker</a></h1>
+          <h1 id="title"><a href="index.html">Proof Checker</a></h1>
         </div>
         <a href="help.html" class="item">
           Help
