--- a/index.html
+++ b/index.html
@@ -165,11 +165,13 @@
         </div>
 
         <hr style="margin-bottom: 15px;">
-        <img id="logo" src="/assets/logicproofchecker.png">
-        <p id="bottom">Capstone 2019</p>
-        <p id="bottom">Logic Proof Checker</p>
-        <p id="bottom">Jay Arellano / Mustafa Al Asadi / Gautam Tata / Ben Lenz</p>
-        <br>
+        <div class="bottom">
+          <img class="logo" src="assets/logicproofchecker.png" />
+          <p>Capstone 2019</p>
+          <p>Logic Proof Checker</p>
+          <p>Jay Arellano / Mustafa Al Asadi / Gautam Tata / Ben Lenz</p>
+          <p>Site Version: GIT_VERSION_TAG</p>
+        </div>
       </div>
 
       <!-- Administration Interface -->
