testing git-hook

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/assets/logicproofchecker.png">
 
-    <title>proof checker</title>
+    <title>Proof Checker</title>
 
     <!-- CSS & Fonts, via CDN -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans" type="text/css" crossorigin="anonymous" referrerpolicy="no-referrer" />
