--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,8 +33,8 @@
     <!-- Sign in with Google Client ID -->
     <meta name="google-signin-client_id" content="266670200080-to3o173goghk64b6a0t0i04o18nt2r3i.apps.googleusercontent.com">
     
-    <script type="text/javascript" charset="utf-8" src="syntax_upstream.js"></script>
-    <script type="text/javascript" charset="utf-8" src="proofs_upstream.js"></script>
+    <script type="text/javascript" charset="utf-8" src="syntax.js"></script>
+    <script type="text/javascript" charset="utf-8" src="proofs.js"></script>
     <script type="text/javascript" src="index.js"></script>
   </head>
   <body>
