Clean up .html files

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,8 +33,8 @@
     <!-- Sign in with Google Client ID -->
     <meta name="google-signin-client_id" content="171509471210-8d883n4nfjebkqvkp29p50ijqmt6c5nd.apps.googleusercontent.com">
     
-    <script type="text/javascript" charset="utf-8" src="syntax_upstream.js"></script>
-    <script type="text/javascript" charset="utf-8" src="proofs_upstream.js"></script>
+    <script type="text/javascript" charset="utf-8" src="syntax.js"></script>
+    <script type="text/javascript" charset="utf-8" src="proofs.js"></script>
     <script type="text/javascript" src="index.js"></script>
   </head>
   <body>
