Add upstream attribution / test git hook

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -158,6 +158,7 @@
         <hr style="margin-bottom: 15px;">
         <div class="bottom">
           <img class="logo" src="assets/logicproofchecker.png" />
+          <p>Proof Checking code originally from the <a href="https://github.com/OpenLogicProject/fitch-checker">Open Logic Project</a></p>
           <p>Capstone 2019</p>
           <p>Logic Proof Checker</p>
           <p>Jay Arellano / Mustafa Al Asadi / Gautam Tata / Ben Lenz</p>
