Switch to local files instead of CDN to work with privacybadger

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,6 +33,7 @@
     <!-- Sign in with Google Client ID -->
     <meta name="google-signin-client_id" content="266670200080-to3o173goghk64b6a0t0i04o18nt2r3i.apps.googleusercontent.com">
     
+    <!-- Scripts, local -->
     <script type="text/javascript" charset="utf-8" src="syntax.js"></script>
     <script type="text/javascript" charset="utf-8" src="proofs.js"></script>
     <script type="text/javascript" src="index.js"></script>
