--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" href="assets/lib/semantic.min.css" integrity="sha256-9mbkOfVho3ZPXfM7W8sV2SndrGDuh7wuyLjtsWeTI1Q=" />
 
     <!-- CSS, local -->
-    <link rel="stylesheet" type="text/css" href="assets/lib/index.css" />
-    <link rel="stylesheet" type="text/css" href="assets/lib/proofs.css" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="stylesheet" type="text/css" href="proofs.css" />
 
     <!-- Scripts, third-party -->
     <script src="assets/lib/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="></script>
