Simplified notation help on home page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -131,14 +131,14 @@
 
                   <strong><p style="text-decoration: underline;">Symbols:</p></strong>
                   <table id="symkey">
-                      <tr><td>For negation you may use any of the symbols:</td><td> <span class="tt">¬ ~ ∼ - −</span></td></tr>
-                      <tr><td>For conjunction you may use any of the symbols:</td><td> <span class="tt">∧ ^ &amp; . · *</span></td></tr>
-                      <tr><td>For disjunction you may use any of the symbols:</td><td> <span class="tt">∨ v</span></td></tr>
-                      <tr><td>For the biconditional you may use any of the symbols:</td><td> <span class="tt">↔ ≡ &lt;-&gt; &lt;&gt;</span> (or in TFL only: <span class="tt">=</span>)</td></tr>
-                      <tr><td>For the conditional you may use any of the symbols:</td><td> <span class="tt">→ ⇒ ⊃ -&gt; &gt;</span></td></tr>
-                      <tr><td>For the universal quantifier (FOL only), you may use any of the symbols:</td><td> <span class="tt">∀x (∀x) Ax (Ax) (x) ⋀x</span></tr>
-                      <tr><td>For the existential quantifier (FOL only), you may use any of the symbols:</td><td> <span class="tt">∃x (∃x) Ex (Ex) ⋁x</span></tr>
-                      <tr><td>For a contradiction you may use any of the symbols:</td><td> <span class="tt"> ⊥ XX #</span></td></tr>
+                      <tr><td>negation:</td><td> <span class="tt">∼</span></td></tr>
+                      <tr><td>conjunction:</td><td> <span class="tt">^</span></td></tr>
+                      <tr><td>disjunction:</td><td> <span class="tt">v</span></td></tr>
+                      <tr><td>biconditional:</td><td> <span class="tt">&lt;&gt;</span> (or in TFL only: <span class="tt">=</span>)</td></tr>
+                      <tr><td>conditional:</td><td> <span class="tt">-&gt;</span></td></tr>
+                      <tr><td>universal quantification (FOL only):</td><td> <span class="tt">Ax (Ax)</span></tr>
+                      <tr><td>existential quantification (FOL only):</td><td> <span class="tt">Ex (Ex)</span></tr>
+                      <tr><td>contradiction:</td><td> <span class="tt">#</span></td></tr>
                   </table>
 
                   <strong><p style="text-decoration: underline;">The following buttons do the following things:</p></strong><br>
