changes to symbols list and to project credits on home page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -136,8 +136,8 @@
                       <tr><td>disjunction:</td><td> <span class="tt">v</span></td></tr>
                       <tr><td>biconditional:</td><td> <span class="tt">&lt;&gt;</span> (or in TFL only: <span class="tt">=</span>)</td></tr>
                       <tr><td>conditional:</td><td> <span class="tt">-&gt;</span></td></tr>
-                      <tr><td>universal quantification (FOL only):</td><td> <span class="tt">Ax (Ax)</span></tr>
-                      <tr><td>existential quantification (FOL only):</td><td> <span class="tt">Ex (Ex)</span></tr>
+                      <tr><td>universal quantification (FOL only):</td><td> <span class="tt">Ax</span> or <span class="tt">(Ax)</span></tr>
+                      <tr><td>existential quantification (FOL only):</td><td> <span class="tt">Ex</span> or <span class="tt">(Ex)</span></tr>
                       <tr><td>contradiction:</td><td> <span class="tt">#</span></td></tr>
                   </table>
 
@@ -158,11 +158,8 @@
 
         <hr style="margin-bottom: 15px;">
         <div class="bottom">
-          <img class="logo" src="assets/logicproofchecker.png" />
-          <p>Proof Checking code originally from the <a href="https://github.com/OpenLogicProject/fitch-checker">Open Logic Project</a></p>
-          <p>Capstone 2019</p>
-          <p>Logic Proof Checker</p>
-          <p>Jay Arellano / Mustafa Al Asadi / Gautam Tata / Ben Lenz</p>
+          <p>This site based on the code from the <a href="https://github.com/OpenLogicProject/fitch-checker">Open Logic Project</a></p>
+          <p>Adapted by Corey Hunter and the CSUMB Capstone 2019 team: Jay Arellano, Mustafa Al Asadi, Gautam Tata, and Ben Lenz </p>
           <p>Site Version: GIT_VERSION_TAG</p>
         </div>
       </div>
