further improvements to home page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -138,16 +138,16 @@
                       <tr><td>conditional:</td><td> <span class="tt">-&gt;</span></td></tr>
                       <tr><td>universal quantification (FOL only):</td><td> <span class="tt">Ax</span> or <span class="tt">(Ax)</span></tr>
                       <tr><td>existential quantification (FOL only):</td><td> <span class="tt">Ex</span> or <span class="tt">(Ex)</span></tr>
-                      <tr><td>contradiction:</td><td> <span class="tt">#</span></td></tr>
+                      <!-- <tr><td>contradiction:</td><td> <span class="tt">#</span></td></tr> -->
                   </table>
 
-                  <strong><p style="text-decoration: underline;">The following buttons do the following things:</p></strong><br>
+                  <strong><p style="text-decoration: underline;">Proof operations:</p></strong><br>
                   <table id="key">
                           <tr><td><a>×</a></td><td>= delete this line</td></tr>
-                          <tr><td><a><img src="../assets/new.png" alt="|+"/></a></td><td>= add a line below this one</td></tr>
-                          <tr><td><a><img src="../assets/newsp.png" alt="||+" /></a></td><td>= add a new subproof below this line</td></tr>
-                          <tr><td><a><img src="../assets/newb.png" alt="&lt;+" /></a></td><td>= add a new line below this subproof to the parent subproof</td></tr>
-                          <tr><td><a><img src="../assets/newspb.png" alt="&lt;|+" /></a></td><td>= add a new subproof below this subproof to the parent subproof</td></tr>
+                          <tr><td><a><img src="../assets/new.png" alt="|+"/></a></td><td>add a line below this one</td></tr>
+                          <tr><td><a><img src="../assets/newsp.png" alt="||+" /></a></td><td>add a new subproof below this line</td></tr>
+                          <tr><td><a><img src="../assets/newb.png" alt="&lt;+" /></a></td><td>add a new line below this subproof to the parent subproof</td></tr>
+                          <tr><td><a><img src="../assets/newspb.png" alt="&lt;|+" /></a></td><td>add a new subproof below this subproof to the parent subproof</td></tr>
                   </table>
 
                 </div>
@@ -158,8 +158,8 @@
 
         <hr style="margin-bottom: 15px;">
         <div class="bottom">
-          <p>This site based on the code from the <a href="https://github.com/OpenLogicProject/fitch-checker">Open Logic Project</a></p>
-          <p>Adapted by Corey Hunter and the CSUMB Capstone 2019 team: Jay Arellano, Mustafa Al Asadi, Gautam Tata, and Ben Lenz </p>
+          <p>This site based on code from the <a href="https://github.com/OpenLogicProject/fitch-checker">Open Logic Project</a></p>
+          <p>Adapted by Corey Hunter and a CSUMB 2019 Capstone team: Jay Arellano, Mustafa Al Asadi, Gautam Tata, and Ben Lenz </p>
           <p>Site Version: GIT_VERSION_TAG</p>
         </div>
       </div>
