fixed typo on home page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -143,7 +143,7 @@
 
                   <strong><p style="text-decoration: underline;">Proof operations:</p></strong><br>
                   <table id="key">
-                          <tr><td><a>×</a></td><td>= delete this line</td></tr>
+                          <tr><td><a>×</a></td><td>delete this line</td></tr>
                           <tr><td><a><img src="../assets/new.png" alt="|+"/></a></td><td>add a line below this one</td></tr>
                           <tr><td><a><img src="../assets/newsp.png" alt="||+" /></a></td><td>add a new subproof below this line</td></tr>
                           <tr><td><a><img src="../assets/newb.png" alt="&lt;+" /></a></td><td>add a new line below this subproof to the parent subproof</td></tr>
