updated references page

--- a/frontend/references.html
+++ b/frontend/references.html
@@ -27,7 +27,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans" type="text/css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/lib/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" />
-    <link rel="stylesheet" href="assets/lib/skeleton.min.css" integrity="sha256-2YQRJMXD7pIAPHiXr0s+vlRWA7GYJEK0ARns7k2sbHY=" />
     <link rel="stylesheet" href="assets/lib/semantic.min.css" integrity="sha256-9mbkOfVho3ZPXfM7W8sV2SndrGDuh7wuyLjtsWeTI1Q=" />
 
     <!-- CSS, local -->
@@ -66,8 +65,17 @@
 
 <div class="ui container segment" id="rulesContainer">
     <h2 id="imageHeader" class="ui header">References</h2>
-    <p><a href = "http://openlogicproject.org/">Open Logic Project</a> (The Framework used in this proof checking tool)</p>
-    <p><a href = "https://textbooks.opensuny.org/concise-introduction-to-logic/">Introduction to Logic Textbook</a> (References for the type of logic used in the course)</p>
+
+    <p><a href = "http://www.proofs.openlogicproject.org/">Open Logic Project's proof editor and checker</a><br>
+    An open-source proof checker developed as part of the <a href="https://openlogicproject.org/">Open Logic Project</a>.  
+    Our site is a modified version of the Open Logic Project's proof checker.
+
+    <p><a href = "https://textbooks.opensuny.org/concise-introduction-to-logic/">A Concise Introduction to Logic</a><br>
+    A free textbook by Craig DeLancey of SUNY Oswego. 
+    This site supports the proof system used in DeLancey's text.
+
+    <p>The code for this site is available <a href="https://github.com/grbruns/capstone-openLogic">here</a>
+    and is licensed under the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Purpose License (GPL) v3</a>.
 </div>
 
 </body>
