cleaned up top-level menu

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,14 +44,14 @@
       <div class="header item">
         <h1 id="title"><a href="index.html">Proof Checker</a></h1>
       </div>
-      <a href="help.html" class="item">
-        Help
+      <a href="rules.html" class="item">
+        Proof Rules
       </a>
       <a href="references.html" class="item">
         References
       </a>
-      <a href="rules.html" class="item">
-        Logic Rules
+      <a href="help.html" class="item">
+        Help
       </a>
       <a id="adminLink" class="item" style="display: none;">
         Admin
