cleaned up html

--- a/frontend/help.html
+++ b/frontend/help.html
@@ -46,15 +46,15 @@
   <body>
     <div id="top-menu" class="ui menu" style = "height : 60px;">
       <div class="header item">
-        <h1 id="title" style = "color : white;"><a href="/" style="color:white;">Proof Checker</a></h1>
+        <h1 id="title"><a href="index.html">Proof Checker</a></h1>
       </div>
-      <a href="rules.html" class="item" style = "color : white;">
+      <a href="rules.html" class="item">
         Proof Rules
       </a>
-      <a href="references.html" class="item" style = "color : white;">
+      <a href="references.html" class="item">
         References
       </a>
-      <a href="help.html" class="item" style = "color : white;">
+      <a href="help.html" class="item">
         Help
       </a>
       <div class="right menu">
