--- a/frontend/rules.html
+++ b/frontend/rules.html
@@ -63,7 +63,9 @@
     </div>
 
     <div class="ui container segment" id="rulesContainer">
-      <h2 id="imageHeader" class="ui header">Proof Rules (source: Craig DeLancey, 'A Concise Introduction to Logic')</h2>
+      <h2 id="imageHeader" class="ui header">Proof Rules</h2>
+      <h3>source: Craig DeLancey, 'A Concise Introduction to Logic'</h3>
+      <!-- <img class="ui fluid image" src="assets/help.png"> -->
       <img class="ui fluid image" src="assets/help.png">
     </div>
 
