padded proof operations table on home page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -128,7 +128,7 @@
           </h3>
           <div id="textarea-container" class="ui attached segment">
 
-            <strong><p style="text-decoration: underline;">Symbols:</p></strong>
+            <strong><p style="text-decoration: underline;">Notation for logic formulas:</p></strong>
             <table id="symkey">
               <tr><td>negation:</td><td> <span class="tt">∼</span></td></tr>
               <tr><td>conjunction:</td><td> <span class="tt">^</span></td></tr>
@@ -141,12 +141,12 @@
             </table>
 
             <strong><p style="text-decoration: underline;">Proof operations:</p></strong><br>
-            <table id="key">
-              <tr><td><a>×</a></td><td>delete this line</td></tr>
-              <tr><td><a><img src="../assets/new.png" alt="|+"/></a></td><td>add a line below this one</td></tr>
-              <tr><td><a><img src="../assets/newsp.png" alt="||+" /></a></td><td>add a new subproof below this line</td></tr>
-              <tr><td><a><img src="../assets/newb.png" alt="&lt;+" /></a></td><td>add a new line below this subproof to the parent subproof</td></tr>
-              <tr><td><a><img src="../assets/newspb.png" alt="&lt;|+" /></a></td><td>add a new subproof below this subproof to the parent subproof</td></tr>
+            <table id="key" class="ui padded table">
+              <tr><td><a>×</a></td>							<td>delete this line</td></tr>
+              <tr><td><a><img src="../assets/new.png"		alt="|+"/></a></td>	<td>add a line below this one</td></tr>
+              <tr><td><a><img src="../assets/newsp.png"		alt="||+" /></a></td>	<td>add a new subproof below this line</td></tr>
+              <tr><td><a><img src="../assets/newb.png"		alt="&lt;+" /></a></td>	<td>add a new line below this subproof to the parent subproof</td></tr>
+              <tr><td><a><img src="../assets/newspb.png"	alt="&lt;|+" /></a></td><td>add a new subproof below this subproof to the parent subproof</td></tr>
             </table>
           </div>
         </div>
