added rule names on front page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -128,7 +128,7 @@
           </h3>
           <div id="textarea-container" class="ui attached segment">
 
-            <strong><p style="text-decoration: underline;">Notation for logic formulas:</p></strong>
+            <strong><p style="text-decoration: underline;">Notation for logic operators:</p></strong>
             <table id="symkey">
               <tr><td>negation:</td><td>    <span class="tt">∼</span></td></tr>
               <tr><td>conjunction:</td><td> <span class="tt">^</span></td></tr>
@@ -138,6 +138,23 @@
               <tr><td>universal quantification (FOL only):</td><td> <span class="tt">Ax</span> or <span class="tt">(Ax)</span></tr>
               <tr><td>existential quantification (FOL only):</td><td> <span class="tt">Ex</span> or <span class="tt">(Ex)</span></tr>
               <!-- <tr><td>contradiction:</td><td> <span class="tt">#</span></td></tr> -->
+            </table>
+
+            <strong><p style="text-decoration: underline;">Rule names (full and abbreviated) </p></strong>
+            <table id="rulekey">
+              <tr><td>modus ponens</td>			<td><span class="tt">->E</span></td></tr>
+              <tr><td>modus tollens</td>		<td><span class="tt">MT</span></td></tr>
+              <tr><td>double negation</td>		<td><span class="tt">DNE</span></td></tr>
+              <tr><td>addition</td>			<td><span class="tt">VI</span></td></tr>
+              <tr><td>modus tollendo ponens</td>	<td><span class="tt">DS</span></td></tr>
+              <tr><td>adjunction</td>			<td><span class="tt">^I</span></td></tr>
+              <tr><td>simplification</td>		<td><span class="tt">^E</span></td></tr>
+              <tr><td>equivalence</td>			<td><span class="tt"><-></span></td></tr>
+              <tr><td>bicondition</td>			<td></td></tr>
+              <tr><td>repeat</td>			<td><span class="tt">=I</span></td></tr>
+              <tr><td>universal instantiation</td>	<td><span class="tt">AE</span></tr>
+              <tr><td>existential generalization</td>	<td><span class="tt">EI</span></tr>
+              <tr><td>existential instantiation</td>	<td><span class="tt">EE</span></tr>
             </table>
 
             <strong><p style="text-decoration: underline;">Proof operations:</p></strong><br>
