--- a/frontend/index.html
+++ b/frontend/index.html
@@ -128,19 +128,18 @@
           </h3>
           <div id="textarea-container" class="ui attached segment">
 
-            <strong><p style="text-decoration: underline;">Notation for logic operators:</p></strong>
+            <strong><p style="text-decoration: underline;">Notation for logic operators</p></strong>
             <table id="symkey">
-              <tr><td>negation:</td><td>    <span class="tt">∼</span></td></tr>
-              <tr><td>conjunction:</td><td> <span class="tt">^</span></td></tr>
-              <tr><td>disjunction:</td><td> <span class="tt">v</span></td></tr>
-              <tr><td>conditional:</td><td> <span class="tt">-&gt;</span></td></tr>
-              <tr><td>biconditional:</td><td> <span class="tt">&lt;-&gt;</span> (or in TFL only: <span class="tt">=</span>)</td></tr>
-              <tr><td>universal quantification (FOL only):</td><td> <span class="tt">Ax</span> or <span class="tt">(Ax)</span></tr>
-              <tr><td>existential quantification (FOL only):</td><td> <span class="tt">Ex</span> or <span class="tt">(Ex)</span></tr>
-              <!-- <tr><td>contradiction:</td><td> <span class="tt">#</span></td></tr> -->
+              <tr><td>negation:</td>		<td><span class="tt">∼</span></td></tr>
+              <tr><td>conjunction:</td>		<td><span class="tt">^</span></td></tr>
+              <tr><td>disjunction:</td>		<td><span class="tt">v</span></td></tr>
+              <tr><td>conditional:</td>		<td><span class="tt">-&gt;</span></td></tr>
+              <tr><td>biconditional:</td>	<td><span class="tt">&lt;-&gt;</span> (or in TFL only: <span class="tt">=</span>)</td></tr>
+              <tr><td>universal quantification:</td>	<td> <span class="tt">Ax</span> or <span class="tt">(Ax)</span></tr>
+              <tr><td>existential quantification:</td>	<td> <span class="tt">Ex</span> or <span class="tt">(Ex)</span></tr>
             </table>
 
-            <strong><p style="text-decoration: underline;">Rule names (full and abbreviated) </p></strong>
+            <strong><p style="text-decoration: underline;">Rule names (full and abbreviated)</p></strong>
             <table id="rulekey">
               <tr><td>modus ponens</td>			<td><span class="tt">->E</span></td></tr>
               <tr><td>modus tollens</td>		<td><span class="tt">MT</span></td></tr>
@@ -157,7 +156,7 @@
               <tr><td>existential instantiation</td>	<td><span class="tt">EE</span></tr>
             </table>
 
-            <strong><p style="text-decoration: underline;">Proof operations:</p></strong><br>
+            <strong><p style="text-decoration: underline;">Proof operations</p></strong>
             <table id="key" style="border-collapse: separate; border-spacing: 10px;">
               <tr><td><a>×</a></td>							<td>delete this line</td></tr>
               <tr><td><a><img src="../assets/new.png"		alt="|+"/></a></td>	<td>add a line below this one</td></tr>
