cleaned up help info on front page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -134,7 +134,7 @@
               <tr><td>conjunction:</td>		<td><span class="tt">^</span></td></tr>
               <tr><td>disjunction:</td>		<td><span class="tt">v</span></td></tr>
               <tr><td>conditional:</td>		<td><span class="tt">-&gt;</span></td></tr>
-              <tr><td>biconditional:</td>	<td><span class="tt">&lt;-&gt;</span> (or in TFL only: <span class="tt">=</span>)</td></tr>
+              <tr><td>biconditional:</td>	<td><span class="tt">&lt;-&gt;</span></td></tr>
               <tr><td>universal quantification:</td>	<td> <span class="tt">Ax</span> or <span class="tt">(Ax)</span></tr>
               <tr><td>existential quantification:</td>	<td> <span class="tt">Ex</span> or <span class="tt">(Ex)</span></tr>
             </table>
