more front page clean appearance changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -124,7 +124,7 @@
         <div class="column" style="margin-left: 0;">
 
           <h3 id="textarea-header" class="ui top attached header">
-            How to Use the Checker:
+            Using the checker:
           </h3>
           <div id="textarea-container" class="ui attached segment">
 
