more front page clean appearance changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -145,7 +145,7 @@
               <tr><td>modus ponens</td>			<td><span class="tt">->E</span></td></tr>
               <tr><td>modus tollens</td>		<td><span class="tt">MT</span></td></tr>
               <tr><td>double negation</td>		<td><span class="tt">DNE</span></td></tr>
-              <tr><td>addition</td>			<td><span class="tt">VI</span></td></tr>
+              <tr><td>addition</td>			<td><span class="tt">vI</span></td></tr>
               <tr><td>modus tollendo ponens</td>	<td><span class="tt">DS</span></td></tr>
               <tr><td>adjunction</td>			<td><span class="tt">^I</span></td></tr>
               <tr><td>simplification</td>		<td><span class="tt">^E</span></td></tr>
