--- a/frontend/index.html
+++ b/frontend/index.html
@@ -152,6 +152,7 @@
               <tr><td>equivalence</td>			<td><span class="tt"><-></span></td></tr>
               <tr><td>bicondition</td>			<td></td></tr>
               <tr><td>repeat</td>			<td><span class="tt">=I</span></td></tr>
+              <tr><td>conditional derivation</td>	<td><span class="tt">->I</span></tr>
               <tr><td>universal instantiation</td>	<td><span class="tt">AE</span></tr>
               <tr><td>existential generalization</td>	<td><span class="tt">EI</span></tr>
               <tr><td>existential instantiation</td>	<td><span class="tt">EE</span></tr>
