modified list of rule names to include RAA and to replace R with Rep

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -151,8 +151,9 @@
               <tr><td>simplification</td>		<td><span class="tt">^E</span></td></tr>
               <tr><td>equivalence</td>			<td><span class="tt"><-></span></td></tr>
               <tr><td>bicondition</td>			<td></td></tr>
-              <tr><td>repeat</td>			<td><span class="tt">R</span></td></tr>
+              <tr><td>repeat</td>			<td><span class="tt">Rep</span></td></tr>
               <tr><td>conditional derivation</td>	<td><span class="tt">->I</span></tr>
+              <tr><td>reductio ad absurdum</td>	<td><span class="tt">RAA</span></tr>
               <tr><td>universal instantiation</td>	<td><span class="tt">AE</span></tr>
               <tr><td>existential generalization</td>	<td><span class="tt">EI</span></tr>
               <tr><td>existential instantiation</td>	<td><span class="tt">EE</span></tr>
