fixed abbreviated rule name for equivalence

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -149,7 +149,7 @@
               <tr><td>addition</td>			<td><span class="tt">vI</span></td></tr>
               <tr><td>adjunction</td>			<td><span class="tt">^I</span></td></tr>
               <tr><td>simplification</td>		<td><span class="tt">^E</span></td></tr>
-              <tr><td>equivalence</td>			<td><span class="tt"><-></span></td></tr>
+              <tr><td>equivalence</td>			<td><span class="tt"><->E</span></td></tr>
               <tr><td>bicondition</td>			<td></td></tr>
               <tr><td>repeat</td>			<td><span class="tt">Rep</span></td></tr>
               <tr><td>conditional derivation</td>	<td><span class="tt">->I</span></tr>
