Updated credits at bottom of main page, and tweaked references page

--- a/frontend/references.html
+++ b/frontend/references.html
@@ -67,7 +67,7 @@
 
       <p><a href = "http://www.proofs.openlogicproject.org/">Open Logic Project's proof editor and checker</a><br>
 	An open-source proof checker developed as part of the <a href="https://openlogicproject.org/">Open Logic Project</a>.  
-	Our site is a modified version of the Open Logic Project's proof checker.
+	This site is a modified version of the Open Logic Project's proof checker.
 
       <p><a href = "https://textbooks.opensuny.org/concise-introduction-to-logic/">A Concise Introduction to Logic</a><br>
 	A free textbook by Craig DeLancey of SUNY Oswego. 
