--- a/frontend/index.html
+++ b/frontend/index.html
@@ -178,7 +178,7 @@
     <hr style="margin-bottom: 15px;">
     <div class="bottom">
       <p>This site based on code from the <a href="https://github.com/OpenLogicProject/fitch-checker">Open Logic Project</a></p>
-      <p>Adapted by Corey Hunter and a CSUMB 2019 Capstone team: Jay Arellano, Mustafa Al Asadi, Gautam Tata, and Ben Lenz </p>
+      <p>Modified by faculty and students at Cal. State University, Monterey Bay (Jay Arellano, Mustafa Al Asadi, Glenn Bruns, Corey Hunter, Ben Lenz, and Gautam Tata.</p>
       <p>Site Version: GIT_VERSION_TAG</p>
     </div>
 </div>
