futher changes to bottom of main page and references page

--- a/frontend/references.html
+++ b/frontend/references.html
@@ -65,13 +65,15 @@
     <div class="ui container segment" id="rulesContainer">
       <h2 id="imageHeader" class="ui header">References</h2>
 
+      <p><a href = "https://textbooks.opensuny.org/concise-introduction-to-logic/">A Concise Introduction to Logic</a><br>
+	A free logic textbook by Craig DeLancey of SUNY Oswego. 
+	This site supports the proof system used in DeLancey's text.
+
       <p><a href = "http://www.proofs.openlogicproject.org/">Open Logic Project's proof editor and checker</a><br>
 	An open-source proof checker developed as part of the <a href="https://openlogicproject.org/">Open Logic Project</a>.  
-	This site is a modified version of the Open Logic Project's proof checker.
 
-      <p><a href = "https://textbooks.opensuny.org/concise-introduction-to-logic/">A Concise Introduction to Logic</a><br>
-	A free textbook by Craig DeLancey of SUNY Oswego. 
-	This site supports the proof system used in DeLancey's text.
+      <p>This site was developed from the Open Logic Project's proof checker by students and faculty at California State University, Monterey Bay
+	(Jay Arellano, Mustafa Al Asadi, Glenn Bruns, Corey Hunter, Ben Lenz, and Gautam Tata).</p>
 
       <p>The code for this site is available <a href="https://github.com/grbruns/capstone-openLogic">here</a>
 	and is licensed under the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Purpose License (GPL) v3</a>.
