--- a/frontend/index.html
+++ b/frontend/index.html
@@ -177,8 +177,7 @@
 
     <hr style="margin-bottom: 15px;">
     <div class="bottom">
-      <p>This site based on code from the <a href="https://github.com/OpenLogicProject/fitch-checker">Open Logic Project</a></p>
-      <p>Modified by faculty and students at Cal. State University, Monterey Bay (Jay Arellano, Mustafa Al Asadi, Glenn Bruns, Corey Hunter, Ben Lenz, and Gautam Tata).</p>
+      <p>This site developed from the <a href="https://github.com/OpenLogicProject/fitch-checker">Open Logic Project</a></p> proof checker by students and faculty at Cal. State University, Montery Bay. See <a href="references.html" class="item">References</a> for details.</p>
       <p>Site Version: GIT_VERSION_TAG</p>
     </div>
 </div>
