futher changes to bottom of main page and references page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,7 +48,7 @@
         Proof Rules
       </a>
       <a href="references.html" class="item">
-        References
+        Credits
       </a>
       <a href="help.html" class="item">
         Help
@@ -177,7 +177,7 @@
 
     <hr style="margin-bottom: 15px;">
     <div class="bottom">
-      <p>This site developed from the <a href="https://github.com/OpenLogicProject/fitch-checker">Open Logic Project</a></p> proof checker by students and faculty at Cal. State University, Montery Bay. See <a href="references.html" class="item">References</a> for details.</p>
+      <p>This site developed from the <a href="https://github.com/OpenLogicProject/fitch-checker">Open Logic Project</a></p> proof checker by students and faculty at Cal. State University, Montery Bay. See <a href="references.html" class="item">Credits</a> for details.</p>
       <p>Site Version: GIT_VERSION_TAG</p>
     </div>
 </div>
