--- a/frontend/references.html
+++ b/frontend/references.html
@@ -51,7 +51,7 @@
 	Proof Rules
       </a>
       <a href="references.html" class="item" style = "color : white;">
-	References
+	Credits
       </a>
       <a href="help.html" class="item" style = "color : white;">
 	Help
@@ -63,10 +63,10 @@
     </div>
 
     <div class="ui container segment" id="rulesContainer">
-      <h2 id="imageHeader" class="ui header">References</h2>
+      <h2 id="imageHeader" class="ui header">Credits</h2>
 
       <p><a href = "https://textbooks.opensuny.org/concise-introduction-to-logic/">A Concise Introduction to Logic</a><br>
-	A free logic textbook by Craig DeLancey of SUNY Oswego. 
+	A logic textbook by Craig DeLancey of SUNY Oswego. 
 	This site supports the proof system used in DeLancey's text.
 
       <p><a href = "http://www.proofs.openlogicproject.org/">Open Logic Project's proof editor and checker</a><br>
