--- a/frontend/index.html
+++ b/frontend/index.html
@@ -177,7 +177,8 @@
 
     <hr style="margin-bottom: 15px;">
     <div class="bottom">
-      <p>This site developed from the <a href="https://github.com/OpenLogicProject/fitch-checker">Open Logic Project</a></p> proof checker by students and faculty at Cal. State University, Montery Bay. See <a href="references.html" class="item">Credits</a> for details.</p>
+      <p>This site based on the <a href="https://github.com/OpenLogicProject/fitch-checker">Open Logic Project</a> proof checker. </p>
+      Modifications by students and faculty at Cal. State University, Montery Bay. See <a href="references.html" class="item">Credits</a> for details.</p>
       <p>Site Version: GIT_VERSION_TAG</p>
     </div>
 </div>
