--- a/frontend/help.html
+++ b/frontend/help.html
@@ -66,21 +66,19 @@
     <div class="ui container segment" id="rulesContainer">
       <h2 id="imageHeader" class="ui header" style="letter-spacing: normal;">Help</h2>
       <h3 style="letter-spacing: normal; margin-bottom: .3rem; text-decoration: underline;">Saving Proofs:</h3>
-      <p>In order to save a proof for later, a user must be signed in to the application. The user can name their proof in the 
-	"name your proof" input bar, if the proof that the user has entered has a name in the input bar and is also imcomplete,
-	the proof will then be saved for later so the user can finish it later. If a user enters a proof with a name that has 
-	already been entered before, the old proof will be updated to the new one.
+      <p>To save a proof for later you must be signed in. Name your proof in the 
+	"name your proof" input bar.  If you enter a name and the proof is incomplete, 
+	the proof will be saved so you can finish it later. If you use a name that has been used before,
+	the old proof will be updated to the new one.
       </p>
-      <h3 style="letter-spacing: normal; margin-bottom: .3rem; text-decoration: underline;">Loading Prepository Problems:</h3>
-      <p>Users can only load proofs from the problem repository if they are signed in. When loading a proof from the problem repository
-	The "name your proof", "Premises", and "Conclusions" input bars are all locked to issue a user is solving a problem specifically
-	from the problem repository. If a user wishes to start from scratch at any time they can click on the "restart proof checking
-	from scratch" button to do so.
+      <h3 style="letter-spacing: normal; margin-bottom: .3rem; text-decoration: underline;">Loading Repository Problems:</h3>
+      <p>To load proofs from the problem repository you must be signed in.  After you load a problem from the respository
+	the "name your proof", "Premises", and "Conclusions" input bars are locked to ensure you are solving a repository problem.
+	To start from scratch, click on the "restart proof checking from scratch" button.
       </p>
       <h3 style="letter-spacing: normal; margin-bottom: .3rem; text-decoration: underline;">Loading Finished Prepository Problems:</h3>
-      <p>When a user loads a finished repository problem, similar to loading repository problems, The "name your proof", "Premises", 
-	and "Conclusions" input bars are all locked. This is done because the purpose of loading problems from this selection is intended
-	for user to view repository problems they have  already done and to see how they did them.
+      <p>After you load a finished repository problem the "name your proof", "Premises", 
+	and "Conclusions" input bars are locked. Finished repository problems are intended to be used for reviewing already solved problems.  
       </p>
     </div>
 
