--- a/frontend/help.html
+++ b/frontend/help.html
@@ -52,7 +52,7 @@
         Proof Rules
       </a>
       <a href="references.html" class="item">
-        References
+       Credits 
       </a>
       <a href="help.html" class="item">
         Help
