--- a/frontend/rules.html
+++ b/frontend/rules.html
@@ -51,7 +51,7 @@
         Proof Rules
       </a>
       <a href="references.html" class="item">
-        References
+       Credits 
       </a>
       <a href="help.html" class="item">
         Help
