Added substitution of identicals name

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -158,6 +158,7 @@
               <tr><td>universal derivation</td>	        <td><span class="tt">AI</span></tr>
               <tr><td>existential instantiation</td>	<td><span class="tt">EE</span></tr>
               <tr><td>existential generalization</td>	<td><span class="tt">EI</span></tr>
+              <tr><td>substitution of identicals</td>	<td><span class="tt">=E</span></tr>
             </table>
 
 	    <br>
