updated rule info for bicondition and identity intro

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -149,8 +149,8 @@
               <tr><td>addition</td>			    <td><span class="tt">vI</span></td></tr>
               <tr><td>adjunction</td>			<td><span class="tt">^I</span></td></tr>
               <tr><td>simplification</td>		<td><span class="tt">^E</span></td></tr>
+              <tr><td>bicondition</td>			<td><span class="tt"><->I</span></td></tr>
               <tr><td>equivalence</td>			<td><span class="tt"><->E</span></td></tr>
-              <tr><td>bicondition</td>			<td></td></tr>
               <tr><td>repeat</td>			    <td><span class="tt">Rep</span></td></tr>
               <tr><td>conditional derivation</td>	    <td><span class="tt">->I</span></tr>
               <tr><td>reductio ad absurdum</td>	        <td><span class="tt">RAA</span></tr>
@@ -158,6 +158,7 @@
               <tr><td>universal derivation</td>	        <td><span class="tt">AI</span></tr>
               <tr><td>existential instantiation</td>	<td><span class="tt">EE</span></tr>
               <tr><td>existential generalization</td>	<td><span class="tt">EI</span></tr>
+              <tr><td>identity introduction</td>	    <td><span class="tt">=I</span></tr>
               <tr><td>substitution of identicals</td>	<td><span class="tt">=E</span></tr>
             </table>
 
