--- a/frontend/rules.html
+++ b/frontend/rules.html
@@ -62,18 +62,17 @@
       </div>
     </div>
 
-    <div class="ui container segment" id="rulesContainer">
-      <h2 id="imageHeader" class="ui header">Propositional logic proof rules</h2>
+    <div class="ui container segment" id="propRulesContainer">
+      <h2 id="imageHeader" class="ui header">Proof rules: propositional logic</h2>
       <h3>source: Craig DeLancey, 'A Concise Introduction to Logic'</h3>
       <!-- <img class="ui fluid image" src="assets/help.png"> -->
-      <img class="ui fluid image" src="assets/help.png">
+      <img class="ui fluid image" src="assets/prop-logic-rules.png">
     </div>
 
-    <div class="ui container segment" id="rulesContainer">
-      <h2 id="imageHeader" class="ui header">First-order logic proof rules</h2>
-      <h3>source: Craig DeLancey, 'A Concise Introduction to Logic'</h3>
+    <div class="ui container segment" id="folRulesContainer">
+      <h2 id="imageHeader" class="ui header">Proof rules: first-order logic</h2>
       <!-- <img class="ui fluid image" src="assets/help.png"> -->
-      <img class="ui fluid image" src="assets/help.png">
+      <img class="ui fluid image" src="assets/fol-rules.png">
     </div>
 
   </body>
