--- a/frontend/rules.html
+++ b/frontend/rules.html
@@ -71,7 +71,7 @@
 
     <div class="ui container segment" id="folRulesContainer">
       <h2 id="imageHeader" class="ui header">Proof rules: first-order logic</h2>
-      <h3>Existential instantiation and Universal derivation rules differ from DeLancey's text.</h3>
+      <h3>Note that Existential instantiation and Universal derivation rules comes from <a href="https://forallx.openlogicproject.org/">forall x: Calgary</a>, not DeLancey's text.</h3>
       <!-- <img class="ui fluid image" src="assets/help.png"> -->
       <img class="ui fluid image" src="assets/fol-rules.png">
     </div>
