--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,10 +28,17 @@
     <!-- Scripts, third-party -->
     <script src="assets/lib/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="></script>
     <script src="assets/lib/semantic.min.js" integrity="sha256-t8GepnyPmw9t+foMh3mKNvcorqNHamSKtKRxxpUEgFI="></script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <!-- updated api call for signin -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <div id="g_id_onload"
+        data-client_id="266670200080-to3o173goghk64b6a0t0i04o18nt2r3i.apps.googleusercontent.com"
+        data-callback="handleCredentialResponse">
+    </div>
+    <div class="g_id_signin" data-type="standard"></div>
 
+    <!-- ******* -->
     <!-- Sign in with Google Client ID -->
-    <meta name="google-signin-client_id" content="266670200080-to3o173goghk64b6a0t0i04o18nt2r3i.apps.googleusercontent.com">
+    <!-- <meta name="google-signin-client_id" content="266670200080-to3o173goghk64b6a0t0i04o18nt2r3i.apps.googleusercontent.com"> -->
     
     <!-- Scripts, local -->
     <script type="text/javascript" charset="utf-8" src="syntax.js"></script>
@@ -181,7 +188,7 @@
     <hr style="margin-bottom: 15px;">
     <div class="bottom">
       <p>This site based on the <a href="https://github.com/OpenLogicProject/fitch-checker">Open Logic Project</a> proof checker. </p>
-      Modifications by students and faculty at Cal. State University, Monterey Bay. See <a href="references.html" class="item">Credits</a> for details.</p>
+      Modifications by students and faculty at Cal. State University, Montery Bay. See <a href="references.html" class="item">Credits</a> for details.</p>
       <p>Site Version: GIT_VERSION_TAG</p>
     </div>
 </div>
