--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,7 +31,8 @@
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
     <!-- Sign in with Google Client ID -->
-    <meta name="google-signin-client_id" content="266670200080-to3o173goghk64b6a0t0i04o18nt2r3i.apps.googleusercontent.com">
+    <!-- <meta name="google-signin-client_id" content="266670200080-to3o173goghk64b6a0t0i04o18nt2r3i.apps.googleusercontent.com"> -->
+    <meta name="google-signin-client_id" content="49611062474-h65v7vphkti1k1lnbfp4it0nn9omikss.apps.googleusercontent.com">
     
     <!-- Scripts, local -->
     <script type="text/javascript" charset="utf-8" src="syntax.js"></script>
