--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,11 +28,17 @@
     <!-- Scripts, third-party -->
     <script src="assets/lib/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="></script>
     <script src="assets/lib/semantic.min.js" integrity="sha256-t8GepnyPmw9t+foMh3mKNvcorqNHamSKtKRxxpUEgFI="></script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+    <!-- updated api call for signin -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <div id="g_id_onload"
+        data-client_id="684622091896-1fk7qevoclhjnhc252g5uhlo5q03mpdo.apps.googleusercontent.com"
+        data-callback="handleCredentialResponse">
+    </div>
+
 
     <!-- Sign in with Google Client ID -->
     <!-- <meta name="google-signin-client_id" content="266670200080-to3o173goghk64b6a0t0i04o18nt2r3i.apps.googleusercontent.com"> -->
-    <meta name="google-signin-client_id" content="49611062474-h65v7vphkti1k1lnbfp4it0nn9omikss.apps.googleusercontent.com">
     
     <!-- Scripts, local -->
     <script type="text/javascript" charset="utf-8" src="syntax.js"></script>
@@ -54,12 +60,13 @@
       <a href="help.html" class="item">
         Help
       </a>
-      <a id="adminLink" class="item" style="display: none;">
+      <a href="admin.html" class="item">
         Admin
       </a>
       <div class="right menu">
         <div class="header item"><a id="user-email" class="item"></a></div>
-        <div class="g-signin2 item" data-onsuccess="onSignIn"></div>
+        <div class="g_id_signin" data-onsuccess="onSignIn" data-type="standard"></div>      
+        <!-- <div class="g-signin2 item" data-onsuccess="onSignIn"></div> -->
       </div>
     </div>
 
@@ -182,8 +189,8 @@
     <hr style="margin-bottom: 15px;">
     <div class="bottom">
       <p>This site based on the <a href="https://github.com/OpenLogicProject/fitch-checker">Open Logic Project</a> proof checker. </p>
-      Modifications by students and faculty at Cal. State University, Monterey Bay. See <a href="references.html" class="item">Credits</a> for details.</p>
-      <p>Site Version: GIT_VERSION_TAG</p>
+      Modifications by students and faculty at Cal. State University, Montery Bay. See <a href="references.html" class="item">Credits</a> for details.</p>
+      <p>Site Version: 108ed1d24e5e6ec3166d50518c55752d6e9677d4</p>
     </div>
 </div>
 
